--- a/bfoa/Chart.yaml
+++ b/bfoa/Chart.yaml
@@ -3,6 +3,7 @@ appVersion: "1.0"
 description: A Helm chart for Kubernetes
 name: bfoa
 version: 0.1.0
+tillerVersion: ">=2.5.0"
 keywords:
   - test
   - bfoa
