--- a/bfoa/templates/deployment.yaml
+++ b/bfoa/templates/deployment.yaml
@@ -1,55 +1,49 @@
+{{- range .Values.deployments -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.nameOverride }}
-  namespace: {{ include "bfoa.namespace" . }}
+  name: {{ required "Name of a deployment is mandatory." .name }}
+  namespace: {{ include "bfoa.namespace" $ }}
   labels:
-{{ include "bfoa.labels" . | indent 4 }}
+    app.kubernetes.io/name: {{ .name }}
+{{ include "bfoa.labels" $ | indent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Values.nameOverride }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      app.kubernetes.io/name: {{ .name }}
+      app.kubernetes.io/instance: {{ $.Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ .Values.nameOverride }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ .name }}
+        app.kubernetes.io/instance: {{ $.Release.Name }}
     spec:
-      serviceAccountName: {{ .Values.uniqueIdentitifier }}-sa
-      serviceAccount: {{ .Values.uniqueIdentitifier }}-sa
-    {{- with .Values.imagePullSecrets }}
+      serviceAccountName: {{ $.Values.uniqueIdentitifier }}-sa
+      serviceAccount: {{ $.Values.uniqueIdentitifier }}-sa
+    {{- with .imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+      {{ range .containers -}}
+        - name: {{ .name }}
+          image: "{{ .image.repository }}:{{ .image.tag }}"
+          imagePullPolicy: {{ .image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: {{ .service.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: {{ .livenessProbe.path }}
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: {{ .readynessProbe.path }}
               port: http
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
+            {{- toYaml .resources | nindent 12 }}
       {{- end }}
-    {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+---
+{{ end }}
