--- a/bfoa/values.yaml
+++ b/bfoa/values.yaml
@@ -3,43 +3,55 @@
 uniqueIdentitifier: blog1
 
 # dev/hml/prd
-environment: 
+environment: dev
 # cdn/bddf
-branch: 
+branch: cdn
 
-image:
-  repository: nginx
-  tag: stable
-  pullPolicy: IfNotPresent
-replicaCount: 1
+application: MyApp
 
-imagePullSecrets: []
-nameOverride: blog1
-fullnameOverride: blog1
+deployments:
+  - name: proxy
+    replicaCount: 1
+    imagePullSecrets: []
 
-service:
-  type: NodePort
-  port: 80
+    containers:
+    - name: nginx
+      image:
+        repository: nginx
+        tag: stable
+        pullPolicy: IfNotPresent   
 
-ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths: []
+      service:
+        type: NodePort
+        port: 80
 
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+      livenessProbe:
+        port: 80
+        path: /
 
-resources:
-  limits:
-    cpu: 500m
-    memory: 512Mi
-  requests:
-    cpu: 100m
-    memory: 128Mi
+      readynessProbe:
+        port: 80
+        path: /
+
+      ingress:
+        enabled: true
+        annotations: 
+          kubernetes.io/ingress.class: nginx
+          kubernetes.io/tls-acme: "true"
+        hosts:
+          - host: chart-example.local
+            paths: [ "/"]
+
+        tls: 
+          - secretName: chart-example-tls
+            hosts:
+              - chart-example.local
+
+      resources:
+        limits:
+          cpu: 500m
+          memory: 512Mi
+        requests:
+          cpu: 100m
+          memory: 128Mi
 
