--- a/bfoa/templates/tests/test-connection.yaml
+++ b/bfoa/templates/tests/test-connection.yaml
@@ -1,5 +1,8 @@
 {{- range .Values.deployments -}}
-{{- range .containers -}}
+{{- range $index, $value:=.containers -}}
+{{- if gt $index 0 -}}
+---
+{{- end -}}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -15,6 +18,5 @@ spec:
       command: ['wget']
       args: ['{{ .name }}:{{ .service.port }}']
   restartPolicy: Never
----
 {{ end }}
 {{ end }}
