--- a/bfoa/values.yaml
+++ b/bfoa/values.yaml
@@ -13,7 +13,6 @@ deployments:
   - name: proxy
     replicaCount: 1
     imagePullSecrets: []
-
     containers:
     - name: nginx
       image:
@@ -42,11 +41,10 @@ deployments:
           - host: chart-example.local
             paths: [ "/"]
 
-        tls: 
-          - secretName: chart-example-tls
-            hosts:
-              - chart-example.local
-
+        # tls: 
+        #   - secretName: chart-example-tls
+        #     hosts:
+        #       - chart-example.local
       resources:
         limits:
           cpu: 500m
